# slay-the-spire1-mcp_mod

./: .gitignore  .mcp.json  README.md  environment.yml  pom.xml  pyproject.toml
mcp/: sts_game_mcp.py
scripts/: Resolve-StsBridgeConfig.ps1  build.ps1  create-mcp-conda-env.ps1  debug-mts.ps1  install.ps1  run-mts.ps1  run-sts-mcp.ps1
skills/sts-mcp-player/: SKILL.md
skills/sts-mcp-player/agents/: openai.yaml
skills/sts-mcp-player/references/: strategy-notes.md
src/main/java/stsmodstarter/: StsModStarter.java
src/main/java/stsmodstarter/bridge/: BridgeActions.java  BridgePaths.java  BridgeProtocol.java  GameStateBridge.java
src/main/java/stsmodstarter/patches/: ShopScreenPatch.java
src/main/resources/: ModTheSpire.json
sts_game_mcp/: __init__.py  server.py
